# liuxue_agent_data

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  README.zh.md  pyproject.toml
docs/adr/: 0001-separate-study-abroad-rag-module.md  0002-manifest-backed-study-abroad-sources.md  0003-keep-study-abroad-rag-retrieval-only.md  0004-require-minimum-source-metadata-for-indexing.md  0005-do-not-return-raw-anonymous-internal-evidence-by-default.md  0006-separate-rrf-fusion-from-ranking-policy.md  0007-limit-v1-study-abroad-loaders.md  0008-use-independent-study-abroad-index-storage.md  0009-abstract-study-abroad-vector-backend.md  0010-no-mcp-layer-in-v1-study-abroad-rag.md  0011-stabilize-study-abroad-python-api.md  0012-keep-v1-study-abroad-rag-out-of-recommendation-runtime.md  0014-use-independent-study-abroad-rag-package.md  (+2 more)
migrations/: 001_init.sql  002_indexes.sql  003_ielts_subscores.sql  004_admissions_crawl_schema.sql  005_admission_vector_chunks.sql  006_course_features.sql  007_course_feature_overrides.sql  AGENTS.md
scripts/: AGENTS.md  git_quick_push.sh
src/: AGENTS.md  __init__.py  api.py  cli.py  config.py  dashboard.py  db.py  e2e_regression.py
tests/: AGENTS.md  test_chroma_vector_store.py  test_course_feature_profile_schema.py  test_course_feature_workflow.py  test_crawl_parser.py  test_dashboard_bilingual_e2e.py  test_e2e_regression.py  test_import_idempotency.py  test_parse_duration.py  test_parse_english_requirement.py  test_parse_intakes.py  test_recommendation.py  test_study_abroad_rag.py  test_vector_chunking.py
(+61 files in other folders)
